[gd_scene load_steps=25 format=2]

[ext_resource path="res://addons/silent_wolf/Auth/Register.gd" type="Script" id=1]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/silent_wolf/assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/back-normal.png" type="Texture" id=4]
[ext_resource path="res://addons/silent_wolf/assets/gfx/info_icon_small.png" type="Texture" id=5]
[ext_resource path="res://addons/silent_wolf/assets/gfx/dummy_info_icon_small.png" type="Texture" id=6]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/back-hover.png" type="Texture" id=8]
[ext_resource path="res://ui/back-pressed.png" type="Texture" id=9]
[ext_resource path="res://ui/window/Window-1.png" type="Texture" id=10]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 176, 178 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 176, 178 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 176, 178 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 90
outline_size = 4
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 61
outline_size = 4
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=11]
content_margin_left = 30.0
content_margin_right = 30.0
content_margin_top = 30.0
content_margin_bottom = 30.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.666667, 0.223529, 0.223529, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=12]
size = 55
outline_color = Color( 0.666667, 0.223529, 0.223529, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 55
outline_color = Color( 0.854902, 0.0901961, 0.0901961, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 64
outline_size = 2
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 7 )

[node name="Register" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 2 )]
margin_left = 40.0
margin_top = 40.0
margin_right = 120.0
margin_bottom = 120.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = ""

[node name="Background" type="Sprite" parent="."]
position = Vector2( 720, 352 )
scale = Vector2( 0.903258, 0.827863 )
z_index = -1
texture = ExtResource( 10 )

[node name="FormContainer" type="VBoxContainer" parent="Background"]
anchor_left = 18.8
anchor_top = 12.8
anchor_right = 18.8
anchor_bottom = 12.8
margin_left = -19920.6
margin_top = -9358.07
margin_right = -18039.6
margin_bottom = -8254.07
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.3, 0.4 )
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignUp Label" type="Label" parent="Background/FormContainer"]
margin_right = 1881.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 5 )
text = "Sign up"
align = 1
uppercase = true

[node name="MainFormContainer" type="HBoxContainer" parent="Background/FormContainer"]
margin_top = 150.0
margin_right = 1881.0
margin_bottom = 543.0
size_flags_horizontal = 0
custom_constants/separation = 30

[node name="FormLabels" type="VBoxContainer" parent="Background/FormContainer/MainFormContainer"]
margin_right = 1037.0
margin_bottom = 393.0
custom_constants/separation = 30

[node name="PlayerNameLabel" type="Label" parent="Background/FormContainer/MainFormContainer/FormLabels"]
margin_right = 1037.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = SubResource( 6 )
text = "Username:"

[node name="EmailLabel" type="Label" parent="Background/FormContainer/MainFormContainer/FormLabels"]
margin_top = 110.0
margin_right = 1037.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 6 )
text = "Email:"

[node name="PasswordLabel" type="Label" parent="Background/FormContainer/MainFormContainer/FormLabels"]
margin_top = 201.0
margin_right = 1037.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 6 )
text = "Password:"

[node name="ConfirmPasswordLabel" type="Label" parent="Background/FormContainer/MainFormContainer/FormLabels"]
margin_top = 292.0
margin_right = 1037.0
margin_bottom = 353.0
custom_fonts/font = SubResource( 6 )
text = "Confirm password:"

[node name="FormInputFields" type="VBoxContainer" parent="Background/FormContainer/MainFormContainer"]
margin_left = 1067.0
margin_right = 1767.0
margin_bottom = 393.0
custom_constants/separation = 30

[node name="PlayerName" type="LineEdit" parent="Background/FormContainer/MainFormContainer/FormInputFields"]
margin_right = 700.0
margin_bottom = 78.0
rect_min_size = Vector2( 700, 78 )
custom_fonts/font = SubResource( 7 )
max_length = 30

[node name="Email" type="LineEdit" parent="Background/FormContainer/MainFormContainer/FormInputFields"]
margin_top = 108.0
margin_right = 700.0
margin_bottom = 183.0
rect_min_size = Vector2( 360, 75 )
custom_fonts/font = SubResource( 8 )
max_length = 50

[node name="Password" type="LineEdit" parent="Background/FormContainer/MainFormContainer/FormInputFields"]
margin_top = 213.0
margin_right = 700.0
margin_bottom = 288.0
rect_min_size = Vector2( 360, 75 )
custom_fonts/font = SubResource( 9 )
max_length = 30
secret = true

[node name="ConfirmPassword" type="LineEdit" parent="Background/FormContainer/MainFormContainer/FormInputFields"]
margin_top = 318.0
margin_right = 700.0
margin_bottom = 393.0
rect_min_size = Vector2( 360, 75 )
custom_fonts/font = SubResource( 10 )
max_length = 30
secret = true

[node name="InfoLabels" type="VBoxContainer" parent="Background/FormContainer/MainFormContainer"]
margin_left = 1797.0
margin_right = 1881.0
margin_bottom = 393.0
rect_min_size = Vector2( 40, 0 )
custom_constants/separation = 24

[node name="UsernameToolButton" type="ToolButton" parent="Background/FormContainer/MainFormContainer/InfoLabels"]
margin_right = 84.0
margin_bottom = 80.0
icon = ExtResource( 5 )

[node name="DummyToolButton1" type="ToolButton" parent="Background/FormContainer/MainFormContainer/InfoLabels"]
margin_top = 104.0
margin_right = 84.0
margin_bottom = 184.0
icon = ExtResource( 6 )

[node name="PasswordToolButton" type="ToolButton" parent="Background/FormContainer/MainFormContainer/InfoLabels"]
margin_top = 208.0
margin_right = 84.0
margin_bottom = 288.0
icon = ExtResource( 5 )

[node name="DummyToolButton2" type="ToolButton" parent="Background/FormContainer/MainFormContainer/InfoLabels"]
margin_top = 312.0
margin_right = 84.0
margin_bottom = 392.0
icon = ExtResource( 6 )

[node name="InfoBox" type="Label" parent="Background/FormContainer"]
visible = false
margin_top = 603.0
margin_right = 1881.0
margin_bottom = 855.0
rect_min_size = Vector2( 250, 0 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.666667, 0.223529, 0.223529, 1 )
custom_colors/font_outline_modulate = Color( 0.937255, 0.917647, 0.917647, 1 )
text = "Password should contain at least 8 characters including uppercase and lowercase letters, numbers and (optionally) special characters."
autowrap = true

[node name="ErrorMessage" type="Label" parent="Background/FormContainer"]
visible = false
margin_top = 603.0
margin_right = 1881.0
margin_bottom = 665.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.866667, 0.101961, 0.101961, 1 )
autowrap = true

[node name="RegisterButton" parent="Background/FormContainer" instance=ExtResource( 2 )]
margin_top = 603.0
margin_right = 1881.0
margin_bottom = 853.0
rect_min_size = Vector2( 500, 250 )
size_flags_horizontal = 1
text = "Submit"

[node name="ProcessingLabel" type="Label" parent="Background/FormContainer"]
visible = false
margin_top = 913.0
margin_right = 1881.0
margin_bottom = 977.0
custom_fonts/font = SubResource( 14 )
text = "Processing..."
align = 1

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="mouse_entered" from="Background/FormContainer/MainFormContainer/InfoLabels/UsernameToolButton" to="." method="_on_UsernameToolButton_mouse_entered"]
[connection signal="mouse_exited" from="Background/FormContainer/MainFormContainer/InfoLabels/UsernameToolButton" to="." method="_on_UsernameToolButton_mouse_exited"]
[connection signal="mouse_entered" from="Background/FormContainer/MainFormContainer/InfoLabels/PasswordToolButton" to="." method="_on_PasswordToolButton_mouse_entered"]
[connection signal="mouse_exited" from="Background/FormContainer/MainFormContainer/InfoLabels/PasswordToolButton" to="." method="_on_PasswordToolButton_mouse_exited"]
[connection signal="pressed" from="Background/FormContainer/RegisterButton" to="." method="_on_RegisterButton_pressed"]
